--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,7 @@ MYSQL_PASSWORD=una_password_cualquiera
 MYSQL_USER=db_user
 MYSQL_ROOT_PASSWORD=root_password
 MYSQL_CONTAINER_NAME=nombre_del_contenedor_que_eligieron_en_docker_compose
-MYSQL_DATABASE=nombre_base_de_datos
 ROOT_USER=root
 
-SQLALCHEMY_DATABASE_URI=mysql+pymysql://${ROOT_USER}:${MYSQL_ROOT_PASSWORD}@${MYSQL_CONTAINER_NAME}:3306/${MYSQL_DATABASE}
+SQLALCHEMY_DATABASE_URI=mysql+pymysql://${ROOT_USER}:${MYSQL_ROOT_PASSWORD}@${MYSQL_CONTAINER_NAME}:3306/empresa_db
 JWT_SECRET_KEY="una_secret_key_cualquiera"
